got icons on the resume page to align properly and achieved correct size

--- a/src/index.css
+++ b/src/index.css
@@ -210,7 +210,7 @@ div.card-body {
 /* Resume Styling */
 
 .devicon {
-  height: 5rem;
+  font-size: 6rem;
 }
 
 .resumeCont {
